@@ -30,10 +30,11 @@ import java.util.Set;
 import java.util.UUID;
 import java.util.concurrent.ConcurrentHashMap;
 import java.util.concurrent.atomic.AtomicReference;
-
 import java.util.regex.Pattern;
 
 import com.alibaba.jstorm.daemon.worker.*;
+import com.alibaba.jstorm.task.error.ErrorConstants;
+import org.apache.commons.io.FileUtils;
 import org.apache.commons.lang.StringUtils;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
@@ -49,13 +50,16 @@ import com.alibaba.jstorm.cluster.StormConfig;
 import com.alibaba.jstorm.utils.JStormUtils;
 import com.alibaba.jstorm.utils.Pair;
 import com.alibaba.jstorm.utils.PathUtils;
+import com.alibaba.jstorm.utils.ProcessLauncher;
 import com.alibaba.jstorm.utils.TimeFormat;
 import com.alibaba.jstorm.utils.TimeUtils;
 
 /**
  * SyncProcesses (1) kill bad worker (2) start new worker
+ *
  * @author Johnfang (xiaojian.fxj@alibaba-inc.com)
  */
+@SuppressWarnings({"unused", "unchecked"})
 class SyncProcessEvent extends ShutdownWork {
     private static Logger LOG = LoggerFactory.getLogger(SyncProcessEvent.class);
 
@@ -80,7 +84,7 @@ class SyncProcessEvent extends ShutdownWork {
     /**
      * workerIdToStartTimeAndPort ensure workId is unique, but don't ensure workId for workerPort
      */
-    private Map<Integer, String> portToWorkerId = new HashMap<Integer, String>();
+    private Map<Integer, String> portToWorkerId = new HashMap<>();
 
     private AtomicReference<Set> needDownloadTopologys;
 
@@ -92,16 +96,8 @@ class SyncProcessEvent extends ShutdownWork {
 
     private WorkerReportError workerReportError;
 
-    /**
-     * @param conf
-     * @param localState
-     * @param workerThreadPids
-     * @param supervisorId
-     * @param sharedContext
-     * @param workerThreadPidsReadLock
-     * @param workerThreadPidsWriteLock
-     */
-    public SyncProcessEvent(String supervisorId, Map conf, LocalState localState, ConcurrentHashMap<String, String> workerThreadPids,
+    public SyncProcessEvent(String supervisorId, Map conf, LocalState localState,
+                            ConcurrentHashMap<String, String> workerThreadPids,
                             IContext sharedContext, WorkerReportError workerReportError) {
 
         this.supervisorId = supervisorId;
@@ -117,30 +113,28 @@ class SyncProcessEvent extends ShutdownWork {
 
         this.sandBoxMaker = new SandBoxMaker(conf);
 
-        this.workerIdToStartTimeAndPort = new HashMap<String, Pair<Integer, Integer>>();
+        this.workerIdToStartTimeAndPort = new HashMap<>();
 
-        this.needDownloadTopologys = new AtomicReference<Set>();
+        this.needDownloadTopologys = new AtomicReference<>();
+
 
         if (ConfigExtension.isEnableCgroup(conf)) {
             cgroupManager = new CgroupManager(conf);
         }
-
-        killingWorkers = new HashMap<String, Integer>();
+        killingWorkers = new HashMap<>();
         this.workerReportError = workerReportError;
     }
 
     /**
      * @@@ Change the old logic In the old logic, it will store LS_LOCAL_ASSIGNMENTS Map<String, Integer> into LocalState
      *
-     *     But I don't think LS_LOCAL_ASSIGNMENTS is useful, so remove this logic
+     * But I don't think LS_LOCAL_ASSIGNMENTS is useful, so remove this logic
      */
-    @SuppressWarnings("unchecked")
     @Override
     public void run() {
-
     }
 
-    public void run(Map<Integer, LocalAssignment> localAssignments, Set<String> downloadFailedTopologyIds ) {
+    public void run(Map<Integer, LocalAssignment> localAssignments, Set<String> downloadFailedTopologyIds) {
         LOG.debug("Syncing processes, interval seconds:" + TimeUtils.time_delta(lastTime));
         lastTime = TimeUtils.current_time_secs();
         try {
@@ -149,14 +143,14 @@ class SyncProcessEvent extends ShutdownWork {
              * Step 1: get assigned tasks from localstat Map<port(type Integer), LocalAssignment>
              */
             if (localAssignments == null) {
-                localAssignments = new HashMap<Integer, LocalAssignment>();
+                localAssignments = new HashMap<>();
             }
             LOG.debug("Assigned tasks: " + localAssignments);
 
             /**
              * Step 2: get local WorkerStats from local_dir/worker/ids/heartbeat Map<workerid [WorkerHeartbeat, state]>
              */
-            Map<String, StateHeartbeat> localWorkerStats = null;
+            Map<String, StateHeartbeat> localWorkerStats;
             try {
                 localWorkerStats = getLocalWorkerStats(conf, localState, localAssignments);
             } catch (Exception e) {
@@ -168,7 +162,7 @@ class SyncProcessEvent extends ShutdownWork {
             /**
              * Step 3: kill Invalid Workers and remove killed worker from localWorkerStats
              */
-            Map<String, Integer> taskCleaupTimeoutMap = null;
+            Map<String, Integer> taskCleaupTimeoutMap;
             Set<Integer> keepPorts = null;
             try {
                 taskCleaupTimeoutMap = (Map<String, Integer>) localState.get(Common.LS_TASK_CLEANUP_TIMEOUT);
@@ -198,52 +192,47 @@ class SyncProcessEvent extends ShutdownWork {
      * check all workers is failed or not
      */
     @SuppressWarnings("unchecked")
-    public void checkNeedUpdateTopologys(Map<String, StateHeartbeat> localWorkerStats, Map<Integer, LocalAssignment> localAssignments) throws Exception {
-        Set<String> topologys = new HashSet<String>();
-        Map<String, Long> topologyAssignTimeStamps = new HashMap<String, Long>();
+    public void checkNeedUpdateTopologys(Map<String, StateHeartbeat> localWorkerStats,
+                                         Map<Integer, LocalAssignment> localAssignments) throws Exception {
+        Set<String> topologies = new HashSet<>();
 
-        for (Entry<Integer, LocalAssignment> entry : localAssignments.entrySet()) {
-            topologys.add(entry.getValue().getTopologyId());
-            topologyAssignTimeStamps.put(entry.getValue().getTopologyId(), entry.getValue().getTimeStamp());
+        for (Map.Entry<Integer, LocalAssignment> entry : localAssignments.entrySet()) {
+            topologies.add(entry.getValue().getTopologyId());
         }
 
         for (StateHeartbeat stateHb : localWorkerStats.values()) {
             State state = stateHb.getState();
             if (!state.equals(State.notStarted)) {
                 String topologyId = stateHb.getHeartbeat().getTopologyId();
-                topologys.remove(topologyId);
+                topologies.remove(topologyId);
             }
         }
         long currTime = System.currentTimeMillis();
-        Set<String> needRemoveTopologys = new HashSet<String>();
-        for (String topologyId : topologys) {
+        Set<String> needRemoveTopologies = new HashSet<>();
+        for (String topologyId : topologies) {
             try {
-                long newAssignTime = topologyAssignTimeStamps.get(topologyId);
-                if ((currTime - newAssignTime) / 1000 < (JStormUtils.MIN_1 * 2)) {
-                    LOG.debug("less 2 minite ,so removed " + topologyId);
-                    needRemoveTopologys.add(topologyId);
+                long lastModifytime = StormConfig.get_supervisor_topology_Bianrymodify_time(conf, topologyId);
+                if ((currTime - lastModifytime) / 1000 < (JStormUtils.MIN_1 * 2)) {
+                    LOG.debug("less 2 minute ,so removed " + topologyId);
+                    needRemoveTopologies.add(topologyId);
                 }
             } catch (Exception e) {
                 LOG.error("Failed to get the time of file last modification for topology" + topologyId, e);
-                needRemoveTopologys.add(topologyId);
+                needRemoveTopologies.add(topologyId);
             }
         }
-        topologys.removeAll(needRemoveTopologys);
+        topologies.removeAll(needRemoveTopologies);
 
-        if (topologys.size() > 0) {
-            LOG.debug("Following topologys is going to re-download the jars, " + topologys);
+        if (topologies.size() > 0) {
+            LOG.debug("Following topologies are going to re-download the jars, " + topologies);
         }
-        needDownloadTopologys.set(topologys);
+        needDownloadTopologys.set(topologies);
     }
 
     /**
-     * mark all new Workers
-     *
-     * @param workerIds
-     * @pdOid 52b11418-7474-446d-bff5-0ecd68f4954f
+     * mark all new Workers like 52b11418-7474-446d-bff5-0ecd68f4954f
      */
     public void markAllNewWorkers(Map<Integer, String> workerIds) {
-
         int startTime = TimeUtils.current_time_secs();
 
         for (Entry<Integer, String> entry : workerIds.entrySet()) {
@@ -251,29 +240,27 @@ class SyncProcessEvent extends ShutdownWork {
             if (oldWorkerIds != null) {
                 workerIdToStartTimeAndPort.remove(oldWorkerIds);
                 // update portToWorkerId
-                LOG.info("exit port is still occupied by old wokerId, so remove unuseful " + oldWorkerIds + " form workerIdToStartTimeAndPort");
+                LOG.info("exit port is still occupied by old workerId, so remove useless "
+                        + oldWorkerIds + " form workerIdToStartTimeAndPort");
             }
             portToWorkerId.put(entry.getKey(), entry.getValue());
-            workerIdToStartTimeAndPort.put(entry.getValue(), new Pair<Integer, Integer>(startTime, entry.getKey()));
+            workerIdToStartTimeAndPort.put(entry.getValue(), new Pair<>(startTime, entry.getKey()));
         }
     }
 
     /**
      * check new workers if the time is not > * SUPERVISOR_WORKER_START_TIMEOUT_SECS, otherwise info failed
-     *
-     * @param conf
-     * @pdOid f0a6ab43-8cd3-44e1-8fd3-015a2ec51c6a
      */
     public void checkNewWorkers(Map conf) throws IOException, InterruptedException {
-
-        Set<String> workers = new HashSet<String>();
+        Set<String> workers = new HashSet<>();
         for (Entry<String, Pair<Integer, Integer>> entry : workerIdToStartTimeAndPort.entrySet()) {
             String workerId = entry.getKey();
             int startTime = entry.getValue().getFirst();
             LocalState ls = StormConfig.worker_state(conf, workerId);
             WorkerHeartbeat whb = (WorkerHeartbeat) ls.get(Common.LS_WORKER_HEARTBEAT);
             if (whb == null) {
-                if ((TimeUtils.current_time_secs() - startTime) < JStormUtils.parseInt(conf.get(Config.SUPERVISOR_WORKER_START_TIMEOUT_SECS))) {
+                if ((TimeUtils.current_time_secs() - startTime) <
+                        JStormUtils.parseInt(conf.get(Config.SUPERVISOR_WORKER_START_TIMEOUT_SECS))) {
                     LOG.info(workerId + " still hasn't started");
                 } else {
                     LOG.error("Failed to start Worker " + workerId);
@@ -299,65 +286,55 @@ class SyncProcessEvent extends ShutdownWork {
      * get localstat approved workerId's map
      *
      * @return Map<workerid [workerheart, state]> [workerheart, state] is also a map, key is "workheartbeat" and "state"
-     * @param conf
-     * @param localState
-     * @param assignedTasks
      * @throws IOException
-     * @pdOid 11c9bebb-d082-4c51-b323-dd3d5522a649
      */
-    @SuppressWarnings("unchecked")
-    public Map<String, StateHeartbeat> getLocalWorkerStats(Map conf, LocalState localState, Map<Integer, LocalAssignment> assignedTasks) throws Exception {
-
-        Map<String, StateHeartbeat> workeridHbstate = new HashMap<String, StateHeartbeat>();
-
+    public Map<String, StateHeartbeat> getLocalWorkerStats(
+            Map conf, LocalState localState, Map<Integer, LocalAssignment> assignedTasks) throws Exception {
+        Map<String, StateHeartbeat> workerIdHbstate = new HashMap<>();
         int now = TimeUtils.current_time_secs();
 
         /**
          * Get Map<workerId, WorkerHeartbeat> from local_dir/worker/ids/heartbeat
          */
         Map<String, WorkerHeartbeat> idToHeartbeat = readWorkerHeartbeats(conf);
-        for (Entry<String, WorkerHeartbeat> entry : idToHeartbeat.entrySet()) {
-
-            String workerid = entry.getKey().toString();
-
+        for (Map.Entry<String, WorkerHeartbeat> entry : idToHeartbeat.entrySet()) {
+            String workerId = entry.getKey();
             WorkerHeartbeat whb = entry.getValue();
-
-            State state = null;
+            State state;
 
             if (whb == null) {
                 state = State.notStarted;
-                Pair<Integer, Integer> timeToPort = this.workerIdToStartTimeAndPort.get(workerid);
+                Pair<Integer, Integer> timeToPort = this.workerIdToStartTimeAndPort.get(workerId);
                 if (timeToPort != null) {
                     LocalAssignment localAssignment = assignedTasks.get(timeToPort.getSecond());
                     if (localAssignment == null) {
                         LOG.info("Following worker don't exit assignment, so remove this port=" + timeToPort.getSecond());
                         state = State.disallowed;
                         // workerId is disallowed ,so remove it from workerIdToStartTimeAndPort
-                        Integer port = this.workerIdToStartTimeAndPort.get(workerid).getSecond();
-                        this.workerIdToStartTimeAndPort.remove(workerid);
+                        Integer port = this.workerIdToStartTimeAndPort.get(workerId).getSecond();
+                        this.workerIdToStartTimeAndPort.remove(workerId);
                         this.portToWorkerId.remove(port);
                     }
                 }
-            } else if (matchesAssignment(whb, assignedTasks) == false) {
-
+            } else if (!matchesAssignment(whb, assignedTasks)) {
                 // workerId isn't approved or
                 // isn't assigned task
                 state = State.disallowed;
 
             } else if ((now - whb.getTimeSecs()) > JStormUtils.parseInt(conf.get(Config.SUPERVISOR_WORKER_TIMEOUT_SECS))) {
-                if (killingWorkers.containsKey(workerid) == false) {
+                if (!killingWorkers.containsKey(workerId)) {
                     String outTimeInfo = " it is likely to be out of memory, the worker is time out ";
                     workerReportError.report(whb.getTopologyId(), whb.getPort(),
-                            whb.getTaskIds(), outTimeInfo);
+                            whb.getTaskIds(), outTimeInfo, ErrorConstants.CODE_WORKER_TIMEOUT);
                 }
 
                 state = State.timedOut;
             } else {
-                if (isWorkerDead(workerid)) {
-                    if (killingWorkers.containsKey(workerid) == false){
-                        String workeDeadInfo = "Worker is dead ";
+                if (isWorkerDead(workerId)) {
+                    if (!killingWorkers.containsKey(workerId)) {
+                        String workerDeadInfo = "Worker is dead ";
                         workerReportError.report(whb.getTopologyId(), whb.getPort(),
-                                whb.getTaskIds(), workeDeadInfo);
+                                whb.getTaskIds(), workerDeadInfo, ErrorConstants.CODE_WORKER_DEAD);
                     }
                     state = State.timedOut;
                 } else {
@@ -366,28 +343,28 @@ class SyncProcessEvent extends ShutdownWork {
             }
 
             if (state != State.valid) {
-                if (killingWorkers.containsKey(workerid) == false)
-                    LOG.info("Worker:" + workerid + " state:" + state + " WorkerHeartbeat:" + whb + " assignedTasks:" + assignedTasks
-                            + " at supervisor time-secs " + now);
+                if (!killingWorkers.containsKey(workerId))
+                    LOG.info("Worker:" + workerId + " state:" + state + " WorkerHeartbeat:" + whb +
+                            " assignedTasks:" + assignedTasks + " at supervisor time-secs " + now);
             } else {
-                LOG.debug("Worker:" + workerid + " state:" + state + " WorkerHeartbeat: " + whb + " at supervisor time-secs " + now);
+                LOG.debug("Worker:" + workerId + " state:" + state + " WorkerHeartbeat: " + whb
+                        + " at supervisor time-secs " + now);
             }
 
-            workeridHbstate.put(workerid, new StateHeartbeat(state, whb));
+            workerIdHbstate.put(workerId, new StateHeartbeat(state, whb));
         }
 
-        return workeridHbstate;
+        return workerIdHbstate;
     }
 
     /**
-     * check whether the workerheartbeat is allowed in the assignedTasks
+     * check whether the worker heartbeat is allowed in the assignedTasks
      *
-     * @param whb : WorkerHeartbeat
-     * @param assignedTasks
-     * @return boolean if true, the assignments(LS-LOCAL-ASSIGNMENTS) is match with workerheart if fasle, is not matched
+     * @param whb           WorkerHeartbeat
+     * @param assignedTasks assigned tasks
+     * @return if true, the assignments(LS-LOCAL-ASSIGNMENTS) match with worker heartbeat, false otherwise
      */
     public boolean matchesAssignment(WorkerHeartbeat whb, Map<Integer, LocalAssignment> assignedTasks) {
-
         boolean isMatch = true;
         LocalAssignment localAssignment = assignedTasks.get(whb.getPort());
 
@@ -409,14 +386,11 @@ class SyncProcessEvent extends ShutdownWork {
     /**
      * get all workers heartbeats of the supervisor
      *
-     * @param conf
-     * @return Map<workerId, WorkerHeartbeat>
-     * @throws IOException
+     * @param conf conf
      * @throws IOException
      */
     public Map<String, WorkerHeartbeat> readWorkerHeartbeats(Map conf) throws Exception {
-
-        Map<String, WorkerHeartbeat> workerHeartbeats = new HashMap<String, WorkerHeartbeat>();
+        Map<String, WorkerHeartbeat> workerHeartbeats = new HashMap<>();
 
         // get the path: STORM-LOCAL-DIR/workers
         String path = StormConfig.worker_root(conf);
@@ -426,13 +400,10 @@ class SyncProcessEvent extends ShutdownWork {
         if (workerIds == null) {
             LOG.info("No worker dir under " + path);
             return workerHeartbeats;
-
         }
 
         for (String workerId : workerIds) {
-
             WorkerHeartbeat whb = readWorkerHeartbeat(conf, workerId);
-
             // ATTENTION: whb can be null
             workerHeartbeats.put(workerId, whb);
         }
@@ -440,15 +411,13 @@ class SyncProcessEvent extends ShutdownWork {
     }
 
     /**
-     * get worker heartbeat by workerid
+     * get worker heartbeat by workerId
      *
-     * @param conf
-     * @param workerId
-     * @returns WorkerHeartbeat
-     * @throws IOException
+     * @param conf     conf
+     * @param workerId worker id
+     * @return WorkerHeartbeat
      */
     public WorkerHeartbeat readWorkerHeartbeat(Map conf, String workerId) throws Exception {
-
         try {
             LocalState ls = StormConfig.worker_state(conf, workerId);
 
@@ -462,19 +431,10 @@ class SyncProcessEvent extends ShutdownWork {
 
     /**
      * launch a worker in local mode
-     *
-     * @param conf
-     * @param sharedcontext
-     * @param topologyId
-     * @param supervisorId
-     * @param port
-     * @param workerId
-     * @param workerThreadPidsAtom
-     * @throws Exception
      */
-    public void launchWorker(Map conf, IContext sharedcontext, String topologyId, String supervisorId, Integer port, String workerId,
-            ConcurrentHashMap<String, String> workerThreadPidsAtom) throws Exception {
-
+    public void launchWorker(Map conf, IContext sharedcontext, String topologyId,
+                             String supervisorId, Integer port, String workerId,
+                             ConcurrentHashMap<String, String> workerThreadPidsAtom) throws Exception {
         String pid = UUID.randomUUID().toString();
 
         WorkerShutdown worker = Worker.mk_worker(conf, sharedcontext, topologyId, supervisorId, port, workerId, null);
@@ -482,23 +442,22 @@ class SyncProcessEvent extends ShutdownWork {
         ProcessSimulator.registerProcess(pid, worker);
 
         workerThreadPidsAtom.put(workerId, pid);
-
     }
 
     // filter conflict jar
     private Set<String> setFilterJars(Map totalConf) {
-        Set<String> filterJars = new HashSet<String>();
+        Set<String> filterJars = new HashSet<>();
 
-        boolean enableClassloader = ConfigExtension.isEnableTopologyClassLoader(totalConf);
-        if (enableClassloader == false) {
+        boolean enableClassLoader = ConfigExtension.isEnableTopologyClassLoader(totalConf);
+        if (!enableClassLoader) {
             // avoid logback vs log4j conflict
             boolean enableLog4j = false;
             String userDefLog4jConf = ConfigExtension.getUserDefinedLog4jConf(totalConf);
-            if (StringUtils.isBlank(userDefLog4jConf) == false) {
+            if (!StringUtils.isBlank(userDefLog4jConf)) {
                 enableLog4j = true;
             }
 
-            if (enableLog4j == true) {
+            if (enableLog4j) {
                 filterJars.add("log4j-over-slf4j");
                 filterJars.add("logback-core");
                 filterJars.add("logback-classic");
@@ -507,6 +466,15 @@ class SyncProcessEvent extends ShutdownWork {
                 filterJars.add("slf4j-log4j");
                 filterJars.add("log4j");
             }
+        }
+
+        String excludeJars = (String) totalConf.get("exclude.jars");
+        if (!StringUtils.isBlank(excludeJars)) {
+            String[] jars = excludeJars.split(",");
+            for (String jar : jars) {
+                filterJars.add(jar);
+            }
+
         }
 
         LOG.info("Remove jars " + filterJars);
@@ -520,11 +488,10 @@ class SyncProcessEvent extends ShutdownWork {
         File file = new File(jar);
         String fileName = file.getName();
         for (String item : collection) {
-
             String regex = item + "[-._0-9]*.jar";
             Pattern p = Pattern.compile(regex);
 
-            if (p.matcher(fileName).matches() == true) {
+            if (p.matcher(fileName).matches()) {
                 return true;
             }
         }
@@ -535,22 +502,22 @@ class SyncProcessEvent extends ShutdownWork {
         return needDownloadTopologys;
     }
 
-    private String getClassPath(String stormjar, String stormHome, Map totalConf) {
-
+    private String getClassPath(String stormHome, Map totalConf) {
         // String classpath = JStormUtils.current_classpath() + ":" + stormjar;
         // return classpath;
 
         String classpath = JStormUtils.current_classpath();
 
-        String[] classpathes = classpath.split(":");
+        String[] classPaths = classpath.split(":");
 
-        Set<String> classSet = new HashSet<String>();
+        Set<String> classSet = new HashSet<>();
 
-        for (String classJar : classpathes) {
-            if (StringUtils.isBlank(classJar) == true) {
+        for (String classJar : classPaths) {
+            if (StringUtils.isBlank(classJar)) {
                 continue;
             }
-            classSet.add(classJar);
+            if (!classJar.contains("/lib/ext/"))
+                classSet.add(classJar);
         }
 
         if (stormHome != null) {
@@ -568,7 +535,6 @@ class SyncProcessEvent extends ShutdownWork {
                     classSet.add(stormHome + File.separator + "lib" + File.separator + file);
                 }
             }
-
         }
 
         Set<String> filterJars = setFilterJars(totalConf);
@@ -579,28 +545,55 @@ class SyncProcessEvent extends ShutdownWork {
                 LOG.info("Remove " + jar);
                 continue;
             }
-            sb.append(jar + ":");
+            sb.append(jar).append(":");
         }
 
-        if (ConfigExtension.isEnableTopologyClassLoader(totalConf)) {
-            return sb.toString().substring(0, sb.length() - 1);
-        } else {
-            sb.append(stormjar);
-            return sb.toString();
-        }
+        return sb.toString();
+    }
 
+    public String getWorkerClassPath(String stormJar, Map totalConf, String stormRoot) {
+        StringBuilder sb = new StringBuilder();
+
+        if (!StringUtils.isBlank((String) totalConf.get(Config.TOPOLOGY_CLASSPATH))) {
+            sb.append(totalConf.get(Config.TOPOLOGY_CLASSPATH)).append(":");
+        }
+        List<String> otherLibs = (List<String>) totalConf.get(GenericOptionsParser.TOPOLOGY_LIB_NAME);
+
+        if (otherLibs != null) {
+            for (String libName : otherLibs) {
+                sb.append(StormConfig.stormlib_path(stormRoot, libName)).append(":");
+            }
+        }
+        sb.append(stormJar);
+        return sb.toString();
+    }
+
+    private String getExternalClassPath(String stormHome, Map totalConf) {
+        StringBuilder sb = new StringBuilder();
+        String extCPs = (String) totalConf.get("worker.external");
+        if (!StringUtils.isBlank(extCPs)) {
+            String[] exts = extCPs.split(",");
+            int len = exts.length;
+            for (int i = 0; i < len; i++) {
+                sb.append(stormHome + "/lib/ext/" + exts[i] + "/*");
+                if (i < len - 1) {
+                    sb.append(":");
+                }
+            }
+        }
+        return sb.toString();
     }
 
     public String getChildOpts(Map stormConf) {
-        String childopts = " ";
+        String childOpts = " ";
 
         if (stormConf.get(Config.TOPOLOGY_WORKER_CHILDOPTS) != null) {
-            childopts += (String) stormConf.get(Config.TOPOLOGY_WORKER_CHILDOPTS);
+            childOpts += (String) stormConf.get(Config.TOPOLOGY_WORKER_CHILDOPTS);
         } else if (ConfigExtension.getWorkerGc(stormConf) != null) {
-            childopts += ConfigExtension.getWorkerGc(stormConf);
+            childOpts += ConfigExtension.getWorkerGc(stormConf);
         }
 
-        return childopts;
+        return childOpts;
     }
 
     public String getLogParameter(Map conf, String stormHome, String topologyName, int port) {
@@ -613,8 +606,11 @@ class SyncProcessEvent extends ShutdownWork {
 
 
         StringBuilder commandSB = new StringBuilder();
-        commandSB.append(" -Dlogfile.name=");
-        commandSB.append(logFileName);
+        String logDir = System.getProperty("jstorm.log.dir");
+        if (!StringUtils.isBlank(logDir)) {
+            commandSB.append(" -Djstorm.log.dir=").append(logDir);
+        }
+        commandSB.append(" -Dlogfile.name=").append(logFileName);
         commandSB.append(" -Dtopology.name=").append(topologyName);
 
         // commandSB.append(" -Dlog4j.ignoreTCL=true");
@@ -622,227 +618,293 @@ class SyncProcessEvent extends ShutdownWork {
         String userDefLogbackConf = ConfigExtension.getUserDefinedLogbackConf(conf);
         String logConf = System.getProperty(LOGBACK_CONF_TAG);
 
-        if (StringUtils.isBlank(userDefLogbackConf) == false) {
-            LOG.info("Use user fined back conf " + userDefLogbackConf);
+        if (!StringUtils.isBlank(userDefLogbackConf)) {
+            LOG.info("Use user defined logback conf " + userDefLogbackConf);
             commandSB.append(LOGBACK_CONF_TAG_CMD).append(userDefLogbackConf);
-        } else if (StringUtils.isBlank(logConf) == false) {
+        } else if (!StringUtils.isBlank(logConf)) {
             commandSB.append(LOGBACK_CONF_TAG_CMD).append(logConf);
-        } else if (StringUtils.isBlank(stormHome) == false) {
-            commandSB.append(LOGBACK_CONF_TAG_CMD).append(stormHome).append(File.separator).append("conf").append(File.separator).append(DEFAULT_LOG_CONF);
+        } else if (!StringUtils.isBlank(stormHome)) {
+            commandSB.append(LOGBACK_CONF_TAG_CMD).append(stormHome).append(File.separator)
+                    .append("conf").append(File.separator).append(DEFAULT_LOG_CONF);
         } else {
             commandSB.append(LOGBACK_CONF_TAG_CMD + DEFAULT_LOG_CONF);
         }
 
         final String LOG4J_CONF_TAG = "log4j.configuration";
         String userDefLog4jConf = ConfigExtension.getUserDefinedLog4jConf(conf);
-        if (StringUtils.isBlank(userDefLog4jConf) == false) {
-            LOG.info("Use user fined log4j conf " + userDefLog4jConf);
+        if (!StringUtils.isBlank(userDefLog4jConf)) {
+            LOG.info("Use user defined log4j conf " + userDefLog4jConf);
             commandSB.append(" -D" + LOG4J_CONF_TAG + "=").append(userDefLog4jConf);
         }
 
         return commandSB.toString();
     }
 
-    private String getGcDumpParam(String topologyName, Map totalConf) {
-        // String gcPath = ConfigExtension.getWorkerGcPath(totalConf);
-        String gcPath = JStormUtils.getLogDir();
-
+    private String getGcDumpParam(String topologyId, int port, Map totalConf) {
         Date now = new Date();
         String nowStr = TimeFormat.getSecond(now);
 
+        String topologyName = Common.getTopologyNameById(topologyId);
+        String logPath = JStormUtils.getLogDir();
+        String gcPath = PathUtils.join(logPath, topologyName);
+
+        try {
+            FileUtils.forceMkdir(new File(gcPath));
+        } catch (Exception ignored) {
+        }
+
+        String gcLogFile = PathUtils.join(logPath, topologyName, topologyName + "-worker-" + port + "-gc.log");
+        String dumpFile = PathUtils.join(logPath, topologyName, "java-" + topologyId + "-" + nowStr + ".hprof");
+
+        // backup old gc log file
+        PathUtils.mv(gcLogFile, gcLogFile + ".old");
+
         StringBuilder gc = new StringBuilder(256);
-        gc.append(" -Xloggc:");
-        gc.append(gcPath).append(File.separator);
-        gc.append(topologyName).append(File.separator);
-        gc.append("%TOPOLOGYID%-worker-%ID%");
-        gc.append("-gc.log -verbose:gc -XX:HeapDumpPath=");
-        gc.append(gcPath).append(File.separator).append(topologyName).append(File.separator).append("java-%TOPOLOGYID%-").append(nowStr).append(".hprof");
-        gc.append(" ");
+        gc.append(" -Xloggc:").append(gcLogFile)
+                .append(" -verbose:gc -XX:+PrintGCDateStamps -XX:+PrintGCDetails")
+                .append(" -XX:HeapDumpPath=").append(dumpFile).append(" ");
 
-
-        return gc.toString();
+        return gc.toString().replace("/./", "/");
     }
 
     /**
-     * launch a worker in distributed mode
+     * Get worker's JVM memory setting
      *
-     * @param conf
-     * @param sharedcontext
-     * @param topologyId
-     * @param supervisorId
-     * @param port
-     * @param workerId
-     * @throws IOException
-     * @pdOid 6ea369dd-5ce2-4212-864b-1f8b2ed94abb
+     * @param assignment
+     * @return
      */
-    public void launchWorker(Map conf, IContext sharedcontext, String topologyId, String supervisorId, Integer port, String workerId, LocalAssignment assignment)
-            throws IOException {
-
-        // STORM-LOCAL-DIR/supervisor/stormdist/topologyId
-        String stormroot = StormConfig.supervisor_stormdist_root(conf, topologyId);
-
-        // STORM-LOCAL-DIR/supervisor/stormdist/topologyId/stormjar.jar
-        String stormjar = StormConfig.stormjar_path(stormroot);
-
-        // get supervisor conf
-        Map stormConf = StormConfig.read_supervisor_topology_conf(conf, topologyId);
-
-        Map totalConf = new HashMap();
-        totalConf.putAll(conf);
-        totalConf.putAll(stormConf);
-
-        // get classpath
-        // String[] param = new String[1];
-        // param[0] = stormjar;
-        // String classpath = JStormUtils.add_to_classpath(
-        // JStormUtils.current_classpath(), param);
-
-        // get child process parameter
-
-        String stormhome = System.getProperty("jstorm.home");
-
+    public String getWorkerMemParameter(LocalAssignment assignment,
+                                        Map totalConf,
+                                        String topologyId,
+                                        Integer port) {
         long memSize = assignment.getMem();
         long memMinSize = ConfigExtension.getMemMinSizePerWorker(totalConf);
-        int cpuNum = assignment.getCpu();
         long memGsize = memSize / JStormUtils.SIZE_1_G;
         int gcThreadsNum = memGsize > 4 ? (int) (memGsize * 1.5) : 4;
-        String childopts = getChildOpts(totalConf);
+        String childOpts = getChildOpts(totalConf);
 
-        childopts += getGcDumpParam(Common.getTopologyNameById(topologyId), totalConf);
+        childOpts += getGcDumpParam(topologyId, port, totalConf);
 
-        Map<String, String> environment = new HashMap<String, String>();
+        StringBuilder commandSB = new StringBuilder();
 
-        if (ConfigExtension.getWorkerRedirectOutput(totalConf)) {
-            environment.put("REDIRECT", "true");
+        memMinSize = memMinSize < memSize ? memMinSize : memSize;
+
+        commandSB.append(" -Xms").append(memMinSize).append(" -Xmx").append(memSize).append(" ");
+        if (memMinSize <= (memSize / 2))
+            commandSB.append(" -Xmn").append(memMinSize / 2).append(" ");
+        else
+            commandSB.append(" -Xmn").append(memSize / 2).append(" ");
+        if (memGsize >= 2) {
+            commandSB.append(" -XX:PermSize=").append(memSize / 32);
         } else {
-            environment.put("REDIRECT", "false");
+            commandSB.append(" -XX:PermSize=").append(memSize / 16);
+        }
+        commandSB.append(" -XX:MaxPermSize=").append(memSize / 16);
+        commandSB.append(" -XX:ParallelGCThreads=").append(gcThreadsNum);
+        commandSB.append(" ").append(childOpts);
+        if (StringUtils.isBlank(assignment.getJvm()) == false) {
+            commandSB.append(" ").append(assignment.getJvm());
         }
 
-        environment.put("LD_LIBRARY_PATH", (String) totalConf.get(Config.JAVA_LIBRARY_PATH));
+        return commandSB.toString();
+    }
+
+    public String getSandBoxParameter(String classpath, String workerClassPath, String workerId)
+            throws IOException {
+        Map<String, String> policyReplaceMap = new HashMap<>();
+        String realClassPath = classpath + ":" + workerClassPath;
+        policyReplaceMap.put(SandBoxMaker.CLASS_PATH_KEY, realClassPath);
+        return sandBoxMaker.sandboxPolicy(workerId, policyReplaceMap);
+    }
+
+    public String getWorkerParameter(LocalAssignment assignment,
+                                     Map totalConf,
+                                     String stormHome,
+                                     String topologyId,
+                                     String supervisorId,
+                                     String workerId,
+                                     Integer port) throws IOException {
+        // STORM-LOCAL-DIR/supervisor/stormdist/topologyId
+        String stormRoot = StormConfig.supervisor_stormdist_root(conf, topologyId);
+
+        // STORM-LOCAL-DIR/supervisor/stormdist/topologyId/stormjar.jar
+        String stormJar = StormConfig.stormjar_path(stormRoot);
 
         StringBuilder commandSB = new StringBuilder();
 
         try {
             if (this.cgroupManager != null) {
-                commandSB.append(cgroupManager.startNewWorker(totalConf, cpuNum, workerId));
+                commandSB.append(cgroupManager.startNewWorker(totalConf, assignment.getCpu(), workerId));
             }
         } catch (Exception e) {
-            LOG.error("fail to prepare cgroup to workerId: " + workerId, e);
-            return;
+            LOG.error("Failed to prepare cgroup to workerId: " + workerId, e);
+            commandSB = new StringBuilder();
         }
 
         // commandSB.append("java -server -Xdebug -Xrunjdwp:transport=dt_socket,address=8000,server=y,suspend=n ");
         commandSB.append("java -server ");
-        commandSB.append(" -Xms" + memMinSize);
-        commandSB.append(" -Xmx" + memSize + " ");
-        if (memMinSize < (memSize / 2))
-            commandSB.append(" -Xmn" + memMinSize + " ");
-        else
-            commandSB.append(" -Xmn" + memSize / 2 + " ");
-        if (memGsize >= 2) {
-            commandSB.append(" -XX:PermSize=" + memSize / 32);
-        } else {
-            commandSB.append(" -XX:PermSize=" + memSize / 16);
-        }
-        commandSB.append(" -XX:MaxPermSize=" + memSize / 16);
-        commandSB.append(" -XX:ParallelGCThreads=" + gcThreadsNum);
-        commandSB.append(" " + childopts);
-        commandSB.append(" " + (assignment.getJvm() == null ? "" : assignment.getJvm()));
+        commandSB.append(getWorkerMemParameter(assignment, totalConf, topologyId, port));
 
-        commandSB.append(" -Djava.library.path=");
-        commandSB.append((String) totalConf.get(Config.JAVA_LIBRARY_PATH));
+        commandSB.append(" -Djava.library.path=").append((String) totalConf.get(Config.JAVA_LIBRARY_PATH));
+        commandSB.append(" -Djstorm.home=").append(stormHome);
+        commandSB.append(getLogParameter(totalConf, stormHome, assignment.getTopologyName(), port));
 
-        if (stormhome != null) {
-            commandSB.append(" -Djstorm.home=");
-            commandSB.append(stormhome);
-        }
+        // get child process parameter
+        String classpath = getClassPath(stormHome, totalConf);
+        String workerClassPath = getWorkerClassPath(stormJar, totalConf, stormRoot);
+        String externalClassPath = getExternalClassPath(stormHome, totalConf);
 
-        String logDir = System.getProperty("jstorm.log.dir");
-        if (logDir != null)
-             commandSB.append(" -Djstorm.log.dir=").append(logDir);
-        commandSB.append(getLogParameter(totalConf, stormhome, assignment.getTopologyName(), port));
-
-        String classpath = getClassPath(stormjar, stormhome, totalConf);
-        String workerClassPath = (String) totalConf.get(Config.TOPOLOGY_CLASSPATH);
-        List<String> otherLibs = (List<String>) stormConf.get(GenericOptionsParser.TOPOLOGY_LIB_NAME);
-        StringBuilder sb = new StringBuilder();
-        if (otherLibs != null) {
-            for (String libName : otherLibs) {
-                sb.append(StormConfig.stormlib_path(stormroot, libName)).append(":");
-            }
-        }
-        workerClassPath = workerClassPath + ":" + sb.toString();
-
-        Map<String, String> policyReplaceMap = new HashMap<String, String>();
-        String realClassPath = classpath + ":" + workerClassPath;
-        policyReplaceMap.put(SandBoxMaker.CLASS_PATH_KEY, realClassPath);
-        commandSB.append(sandBoxMaker.sandboxPolicy(workerId, policyReplaceMap));
+        commandSB.append(getSandBoxParameter(classpath, workerClassPath, workerId));
 
         commandSB.append(" -cp ");
         // commandSB.append(workerClassPath + ":");
         commandSB.append(classpath);
         if (!ConfigExtension.isEnableTopologyClassLoader(totalConf))
             commandSB.append(":").append(workerClassPath);
+        if (!StringUtils.isBlank(externalClassPath)) {
+            commandSB.append(":").append(externalClassPath);
+        }
 
         commandSB.append(" com.alibaba.jstorm.daemon.worker.Worker ");
         commandSB.append(topologyId);
 
-        commandSB.append(" ");
-        commandSB.append(supervisorId);
+        commandSB.append(" ").append(supervisorId);
+        commandSB.append(" ").append(port);
+        commandSB.append(" ").append(workerId);
+        commandSB.append(" ").append(workerClassPath);
 
-        commandSB.append(" ");
-        commandSB.append(port);
+        return commandSB.toString();
 
-        commandSB.append(" ");
-        commandSB.append(workerId);
+    }
 
-        commandSB.append(" ");
-        commandSB.append(workerClassPath + ":" + stormjar);
+    public String getLauncherParameter(LocalAssignment assignment,
+                                       Map totalConf,
+                                       String stormHome,
+                                       String topologyId,
+                                       int port) throws IOException {
 
-        String cmd = commandSB.toString();
-        cmd = cmd.replace("%ID%", port.toString());
-        cmd = cmd.replace("%TOPOLOGYID%", topologyId);
-        if (stormhome != null) {
-            cmd = cmd.replace("%JSTORM_HOME%", stormhome);
-        } else {
-            cmd = cmd.replace("%JSTORM_HOME%", "./");
+        boolean isEnable = ConfigExtension.isProcessLauncherEnable(totalConf);
+        if (isEnable == false) {
+            return "";
         }
+
+        // STORM-LOCAL-DIR/supervisor/stormdist/topologyId
+        String stormRoot = StormConfig.supervisor_stormdist_root(conf, topologyId);
+
+        // STORM-LOCAL-DIR/supervisor/stormdist/topologyId/stormjar.jar
+        String stormJar = StormConfig.stormjar_path(stormRoot);
+
+        StringBuilder sb = new StringBuilder();
+
+        sb.append(" java ");
+        sb.append(ConfigExtension.getProcessLauncherChildOpts(totalConf));
+        sb.append(getLogParameter(totalConf, stormHome, assignment.getTopologyName(), port));
+        sb.append(" -cp ");
+        sb.append(getClassPath(stormHome, totalConf));
+        if (ConfigExtension.isEnableTopologyClassLoader(totalConf)) {
+            // dont't append stormJar
+        } else {
+            // Due to user defined log configuration is likely to be in the stormJar
+            sb.append(":").append(stormJar);
+        }
+        sb.append(" ").append(ProcessLauncher.class.getName()).append(" ");
+
+        String launcherCmd = sb.toString();
+        if (ConfigExtension.getWorkerRedirectOutput(totalConf)) {
+            String outFile = getWorkerRedirectOutput(totalConf, assignment, port);
+            outFile = "-Dlogfile.name=" + outFile + " ";
+            launcherCmd = launcherCmd.replaceAll("-Dlogfile\\.name=.*?\\s", outFile);
+        }
+
+        return launcherCmd;
+    }
+
+    /**
+     * launch a worker in distributed mode
+     *
+     * @throws IOException
+     */
+    public void launchWorker(Map conf, IContext sharedContext, String topologyId, String supervisorId,
+                             Integer port, String workerId, LocalAssignment assignment) throws IOException {
+
+
+        // get supervisor conf
+        Map stormConf = StormConfig.read_supervisor_topology_conf(conf, topologyId);
+        String stormHome = System.getProperty("jstorm.home");
+        if (StringUtils.isBlank(stormHome)) {
+            stormHome = "./";
+        }
+
+        // get worker conf
+        String topologyRoot = StormConfig.supervisor_stormdist_root(conf, topologyId);
+        Map workerConf = StormConfig.read_topology_conf(topologyRoot, topologyId);
+
+        Map totalConf = new HashMap();
+        totalConf.putAll(conf);
+        totalConf.putAll(stormConf);
+        totalConf.putAll(workerConf);
+
+        /**
+         * Here doesn't use System.getenv
+         * environment.putAll(System.getenv);
+         *
+         */
+        Map<String, String> environment = new HashMap<String, String>();
+        if (ConfigExtension.getWorkerRedirectOutput(totalConf)) {
+            environment.put("REDIRECT", "true");
+        } else {
+            environment.put("REDIRECT", "false");
+        }
+        environment.put("LD_LIBRARY_PATH", (String) totalConf.get(Config.JAVA_LIBRARY_PATH));
+        environment.put("jstorm.home", stormHome);
+        environment.put("jstorm.workerId", workerId);
+
+
+        String launcherCmd = getLauncherParameter(assignment, totalConf, stormHome, topologyId, port);
+
+        String workerCmd = getWorkerParameter(assignment,
+                totalConf,
+                stormHome,
+                topologyId,
+                supervisorId,
+                workerId,
+                port);
+        String cmd = launcherCmd + " " + workerCmd;
+        cmd = cmd.replace("%JSTORM_HOME%", stormHome);
 
         LOG.info("Launching worker with command: " + cmd);
         LOG.info("Environment:" + environment.toString());
 
-        JStormUtils.launch_process(cmd, environment, true);
+        JStormUtils.launchProcess(cmd, environment, true);
     }
 
-    private Set<Integer> killUselessWorkers(Map<String, StateHeartbeat> localWorkerStats, Map<Integer, LocalAssignment> localAssignments,
-            Map<String, Integer> taskCleanupTimeoutMap) {
-        Map<String, String> removed = new HashMap<String, String>();
-        Set<Integer> keepPorts = new HashSet<Integer>();
+    private Set<Integer> killUselessWorkers(Map<String, StateHeartbeat> localWorkerStats,
+                                            Map<Integer, LocalAssignment> localAssignments,
+                                            Map<String, Integer> taskCleanupTimeoutMap) {
+        Map<String, String> removed = new HashMap<>();
+        Set<Integer> keepPorts = new HashSet<>();
 
         for (Entry<String, StateHeartbeat> entry : localWorkerStats.entrySet()) {
 
-            String workerid = entry.getKey();
-            StateHeartbeat hbstate = entry.getValue();
-            if (workerIdToStartTimeAndPort.containsKey(workerid) && hbstate.getState().equals(State.notStarted))
+            String workerId = entry.getKey();
+            StateHeartbeat hbState = entry.getValue();
+            if (workerIdToStartTimeAndPort.containsKey(workerId) && hbState.getState().equals(State.notStarted))
                 continue;
 
-            if (hbstate.getState().equals(State.valid)) {
+            if (hbState.getState().equals(State.valid)) {
                 // hbstate.getHeartbeat() won't be null
-                keepPorts.add(hbstate.getHeartbeat().getPort());
+                keepPorts.add(hbState.getHeartbeat().getPort());
             } else {
-                if (hbstate.getHeartbeat() != null) {
-                    removed.put(workerid, hbstate.getHeartbeat().getTopologyId());
+                if (hbState.getHeartbeat() != null) {
+                    removed.put(workerId, hbState.getHeartbeat().getTopologyId());
                 } else {
-                    removed.put(workerid, null);
+                    removed.put(workerId, null);
                 }
 
-                if (killingWorkers.containsKey(workerid) == false) {
-
+                if (!killingWorkers.containsKey(workerId)) {
                     StringBuilder sb = new StringBuilder();
-                    sb.append("Shutting down and clearing state for id ");
-                    sb.append(workerid);
-                    sb.append(";State:");
-                    sb.append(hbstate);
+                    sb.append("Shutting down and clearing state for id ").append(workerId);
+                    sb.append(";State:").append(hbState);
 
                     LOG.info(sb.toString());
                 }
@@ -850,17 +912,17 @@ class SyncProcessEvent extends ShutdownWork {
         }
 
         shutWorker(conf, supervisorId, removed, workerThreadPids, cgroupManager, false, killingWorkers, taskCleanupTimeoutMap);
-        Set<String> activeTopologys = new HashSet<String>();
+        Set<String> activeTopologies = new HashSet<>();
         if (killingWorkers.size() == 0) {
             // When all workers under killing are killed successfully,
             // clean the task cleanup timeout map correspondingly.
             for (Entry<Integer, LocalAssignment> entry : localAssignments.entrySet()) {
-                activeTopologys.add(entry.getValue().getTopologyId());
+                activeTopologies.add(entry.getValue().getTopologyId());
             }
 
-            Set<String> obsoleteTopologys = new HashSet<String>();
+            Set<String> obsoleteTopologys = new HashSet<>();
             for (String topologyId : taskCleanupTimeoutMap.keySet()) {
-                if (activeTopologys.contains(topologyId) == false) {
+                if (!activeTopologies.contains(topologyId)) {
                     obsoleteTopologys.add(topologyId);
                 }
             }
@@ -875,17 +937,34 @@ class SyncProcessEvent extends ShutdownWork {
         // Keep the workers which are still under starting
         for (Entry<String, Pair<Integer, Integer>> entry : workerIdToStartTimeAndPort.entrySet()) {
             String workerId = entry.getKey();
-            StateHeartbeat hbstate = localWorkerStats.get(workerId);
-            if (hbstate != null)
-                if (hbstate.getState().equals(State.notStarted)) {
+            StateHeartbeat hbState = localWorkerStats.get(workerId);
+            if (hbState != null)
+                if (hbState.getState().equals(State.notStarted)) {
                     keepPorts.add(entry.getValue().getSecond());
                 }
         }
         return keepPorts;
     }
 
-    private void startNewWorkers(Set<Integer> keepPorts, Map<Integer, LocalAssignment> localAssignments, Set<String> downloadFailedTopologyIds)
-            throws Exception {
+    private String getWorkerRedirectOutput(Map totalConf, LocalAssignment assignment, int port) {
+
+        String DEFAULT_OUT_TARGET_FILE = JStormUtils.genLogName(assignment.getTopologyName(), port);
+        if (DEFAULT_OUT_TARGET_FILE == null) {
+            DEFAULT_OUT_TARGET_FILE = "/dev/null";
+        } else {
+            DEFAULT_OUT_TARGET_FILE += ".out";
+        }
+        String outputFile = ConfigExtension.getWorkerRedirectOutputFile(totalConf);
+        if (outputFile == null) {
+            outputFile = DEFAULT_OUT_TARGET_FILE;
+        } else {
+            outputFile = outputFile + "-" + assignment.getTopologyName() + "-" + port;
+        }
+        return outputFile;
+    }
+
+    private void startNewWorkers(Set<Integer> keepPorts, Map<Integer, LocalAssignment> localAssignments,
+                                 Set<String> downloadFailedTopologyIds) throws Exception {
         /**
          * Step 4: get reassigned tasks, which is in assignedTasks, but not in keeperPorts Map<port(type Integer), LocalAssignment>
          */
@@ -894,13 +973,15 @@ class SyncProcessEvent extends ShutdownWork {
         /**
          * Step 5: generate new work ids
          */
-        Map<Integer, String> newWorkerIds = new HashMap<Integer, String>();
+        Map<Integer, String> newWorkerIds = new HashMap<>();
 
         for (Entry<Integer, LocalAssignment> entry : newWorkers.entrySet()) {
             Integer port = entry.getKey();
             LocalAssignment assignment = entry.getValue();
-            if (assignment != null && assignment.getTopologyId() != null && downloadFailedTopologyIds.contains(assignment.getTopologyId())) {
-                LOG.info("Can't start this worker: " + port + " about the topology: " + assignment.getTopologyId() + ", due to the damaged binary !!");
+            if (assignment != null && assignment.getTopologyId() != null &&
+                    downloadFailedTopologyIds.contains(assignment.getTopologyId())) {
+                LOG.info("Can't start this worker: " + port + " about the topology: " + assignment.getTopologyId()
+                        + ", due to the damaged binary !!");
                 continue;
             }
             String workerId = UUID.randomUUID().toString();
@@ -918,13 +999,8 @@ class SyncProcessEvent extends ShutdownWork {
 
             StringBuilder sb = new StringBuilder();
             sb.append("Launching worker with assiangment ");
-            sb.append(assignment.toString());
-            sb.append(" for the supervisor ");
-            sb.append(supervisorId);
-            sb.append(" on port ");
-            sb.append(port);
-            sb.append(" with id ");
-            sb.append(workerId);
+            sb.append(assignment).append(" for the supervisor ").append(supervisorId)
+                    .append(" on port ").append(port).append(" with id ").append(workerId);
             LOG.info(sb.toString());
 
             try {
@@ -937,7 +1013,7 @@ class SyncProcessEvent extends ShutdownWork {
                 }
             } catch (Exception e) {
                 workerReportError.report(assignment.getTopologyId(), port,
-                        assignment.getTaskIds(), new String(JStormUtils.getErrorInfo(e)));
+                        assignment.getTaskIds(), JStormUtils.getErrorInfo(e), ErrorConstants.CODE_WORKER_EX);
                 String errorMsg = "Failed to launchWorker workerId:" + workerId + ":" + port;
                 LOG.error(errorMsg, e);
                 throw e;
@@ -959,7 +1035,7 @@ class SyncProcessEvent extends ShutdownWork {
     }
 
     boolean isWorkerDead(String workerId) {
-        if (ConfigExtension.isCheckWorkerAliveBySystemInfo(conf) == false) {
+        if (!ConfigExtension.isCheckWorkerAliveBySystemInfo(conf)) {
             return false;
         }
 
@@ -972,7 +1048,7 @@ class SyncProcessEvent extends ShutdownWork {
             // if all pid in pids are dead, then the worker is dead
             for (String pid : pids) {
                 boolean isDead = JStormUtils.isProcDead(pid);
-                if (isDead == true) {
+                if (isDead) {
                     LOG.info("Found " + workerId + " is dead ");
                 } else {
                     return false;
